h-teaser gap fix

--- a/sass/mixins/_mixins.lists.scss
+++ b/sass/mixins/_mixins.lists.scss
@@ -57,13 +57,13 @@
   @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
     margin-left: -$list__content-teaser--horizontal-gap-h-tablet;
     margin-right: -$list__content-teaser--horizontal-gap-h-tablet;
-    margin-top: -$list__content-teaser__item--horizontal-gap-top-tablet*2;
+    margin-top: -$list__content-teaser__item--horizontal-gap-top-tablet; //*2
   }
 
   @media (min-width: $screen-md-min) {
     margin-left: -$list__content-teaser--horizontal-gap-h-desktop;
     margin-right: -$list__content-teaser--horizontal-gap-h-desktop;
-    margin-top: -$list__content-teaser__item--horizontal-gap-top-desktop*2;
+    margin-top: -$list__content-teaser__item--horizontal-gap-top-desktop; //*2
   }
 }
 
